Progress explore struct

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-1-explore-procedures.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-1-explore-procedures.mdx
@@ -19,7 +19,7 @@ The following table provides an overview of the desired functionality of our pri
 
 |   |   |
 |---|---|
-| **Name** | *Print Line* |
+| **Procedure** | *Print Line* |
 | **Parameters** | `length`: The number of characters to print. Represents the length of the line. |
 | **Description** | Writes a number of ‘-’ characters to the Terminal. The number of characters to write is specified in the `length` parameter. |
 
@@ -121,7 +121,7 @@ The following table provides an overview of a print repeated procedure. Have a g
 
 |   |   |
 |---|---|
-| **Name** | *Print Repeated* |
+| **Procedure** | *Print Repeated* |
 | **Parameters** | `text`: The text to repeat (a string). |
 |                | `times`: The number of times to print this. |
 |                | `with_newline`: A boolean to indicate if a new line should be added to the end. |
