--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-2-explore-functions.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-2-explore-functions.mdx
@@ -31,7 +31,7 @@ We could create a function to read in the user's name, but we will also want to 
 
 |   |   |
 |---|---|
-| **Name** | *Read String* |
+| **Function** | *Read String* |
 | **Parameters** | `prompt`: The message to show to the user |
 | **Returns** | The string entered at the Terminal |
 | **Description** | Displays a prompt, reads the string entered at the terminal, and returns this string to the caller. This can be used to read values from the user. |
@@ -107,7 +107,7 @@ The following table captures our specification for the read integer function. As
 
 |   |   |
 |---|---|
-| **Name** | *Read Integer* |
+| **Function** | *Read Integer* |
 | **Parameters** | `prompt`: The message to show to the user |
 | **Returns** | The integer entered at the Terminal |
 | **Description** | Displays a prompt, reads the string entered, safely converts this to an integer, and returns the value. This will display error messages when there is invalid input, and will ask the user to enter again. |
@@ -226,7 +226,7 @@ Here is the specification that I used for this function. I decided to overload r
 
 |   |   |
 |---|---|
-| **Name** | *Read Integer* |
+| **Function** | *Read Integer* |
 | **Parameters** | `prompt`: The message to show to the user |
 |                | `low`: An integer representing the smallest value to return |
 |                | `high`: An integer representing the largest value to return |
