--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/01-04-design-play-game.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/01-04-design-play-game.mdx
@@ -11,7 +11,7 @@ We are almost at a fully functional game. We can now put aside the `perform gues
 
 |   |   |
 |---|---|
-| **Name** | *Play Game* |
+| **Procedure** | *Play Game* |
 | **Description** | `Play game` is responsible for coordinating the actions involved in playing a single game of *Guess that Number*. Initially the computer will generate a random target value, and output starting text. Then it will repeatedly ask the user to guess the number, until either the user has guessed the value or they have run out of guesses. If the user does run out of guesses then the computer ends the game, and tells the user the target value. |
 
 <div class="caption">Specification for the <code>Play Game</code> procedure</div>
