--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/2-put-together/0-1-explore-enums.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/2-put-together/0-1-explore-enums.mdx
@@ -66,7 +66,7 @@ At the moment the output is less than ideal, as we can only have the numeric val
 
 |   |   |
 |---|---|
-| **Name** | *to string* |
+| **Function** | *to string* |
 | **Parameters** | `d`: The day to convert |
 | **Returns** | A string representation of the day to convert |
 | **Description** | Convert the day (d) to a string. |
@@ -151,7 +151,7 @@ To wrap up this test, we can also look at converting data in the other direction
 
 |   |   |
 |---|---|
-| **Name** | *read day* |
+| **Function** | *read day* |
 | **Parameters** | `prompt`: The message to display when reading the day |
 | **Returns** | The day entered by the user |
 | **Description** | Displays the prompt, and list of days for the user to select from. Data input is validated, and the selected day value is returned. |
