--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/2-put-together/0-2-explore-struct.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/2-put-together/0-2-explore-struct.mdx
@@ -263,7 +263,7 @@ To implement this we can use the [point_in_circle](https://splashkit.io/api/geom
 
 Inside `main` we can add a check to see if the mouse was clicked (using [mouse_clicked](https://splashkit.io/api/input/#mouse-clicked)) and it is over the target. When this is true, you can replace the target with new target data.
 
-Have a go at this yourself.
+Have a go at this yourself. When you get it working you should be able to click the target and have it move to a new location on the screen.
 
 <Accordion>
   <AccordionItem
@@ -294,7 +294,7 @@ int main()
   {
     process_events();
 
-    if (mouse_clicked(LEFT_BUTTON) && mouse_over_target())
+    if (mouse_clicked(LEFT_BUTTON) && mouse_over_target(target))
     {
         target = random_target();
     }
@@ -321,3 +321,260 @@ bool mouse_over_target(target_data target)
   </AccordionItem>
 </Accordion>
 
+## Recording times
+
+The final step for this walkthrough will be to start recording and outputting the times takes.
+
+We are now starting to think about a new *thing* within our program: the reaction timer itself. Rather than coding this as separate variables within our program, we can capture this within a new struct. I chose to call this **reaction_game_data**. Inside this we can put all the data we associate as being part of the reaction timer itself. For now, this can include the target and the number of hits.
+
+|   |   |
+|---|---|
+| **Struct** | *reaction_game_data* |
+| **Fields** | `target`: The target for the user to click |
+|            | `hits`: The number of times the user has successfully clicked the target |
+
+With a new struct, we should immediately think about the need to initialise this data. To help with this we can add in a `new_reaction_game` function. This can set up the program with a random target, and set hits to 0.
+
+|   |   |
+|---|---|
+| **Function** | *New Reaction Game* |
+| **Returns** | A new reaction game, with a random target and no hits. |
+| **Description** | Use new reaction game to initialise a reaction game value. This will start with a random target and 0 hits. |
+
+Main can now be updated to store the reaction game data, and will use this value to keep track of the current game state.
+
+```cpp
+#include "splashkit.h"
+
+// Declare target_data struct here
+
+// Declare reaction_game_data struct here (TODO)
+
+// Add new target here
+
+// Add random target here
+
+// Add draw target here
+
+// Add mouse over target here
+
+// Add new_reaction_game function here (TODO)
+
+int main()
+{
+  open_window("Reaction Timer", 800, 600);
+
+  // Create the game data
+  reaction_game_data game = new_reaction_game();
+  
+  while (!quit_requested())
+  {
+    process_events();
+
+    if (mouse_clicked(LEFT_BUTTON) && mouse_over_target(game.target))
+    {
+      game.target = random_target();
+      //Update hits here (TODO)
+    }
+    
+    clear_screen(COLOR_WHITE);
+    // Draw the target
+    draw_target(game.target);
+    refresh_screen();
+  }
+  
+  return 0;
+}
+```
+
+<Accordion>
+  <AccordionItem
+    header="Code to declare and use reaction game data"
+  >
+
+The code to declare the new reaction game data struct is shown below. It is good to add a documentation style comment above the declaration to help document its details.
+
+```cpp
+/**
+ * Represents the data of the reaction game, including the current target and the number of hits.
+ */
+struct reaction_game_data
+{
+  target_data target;
+  int hits;
+};
+```
+
+We can do the same style of documentation above the functions as well.
+
+```cpp
+/**
+ * @brief Creates a new reaction game with a random target and zero hits.
+ * @return The newly created reaction game
+ */
+reaction_game_data new_reaction_game()
+{
+  reaction_game_data result;
+  result.target = random_target();
+  result.hits = 0;
+  return result;
+}
+```
+
+For main, we can update this to also record the hits as they occur.
+
+```cpp
+#include "splashkit.h"
+
+using std::to_string;
+
+// Declare target_data struct here
+
+// Declare reaction_game_data struct here
+
+// Add new target here
+
+// Add random target here
+
+// Add draw target here
+
+// Add mouse over target here
+
+// Add new_reaction_game function here
+
+int main()
+{
+  open_window("Reaction Timer", 800, 600);
+
+  // Create the game data
+  reaction_game_data game = new_reaction_game();
+  
+  while (!quit_requested())
+  {
+    process_events();
+
+    if (mouse_clicked(LEFT_BUTTON) && mouse_over_target(game.target))
+    {
+      game.target = random_target();
+      game.hits++;
+    }
+    
+    draw_game(game);
+  }
+  
+  return 0;
+}
+```
+
+  </AccordionItem>
+</Accordion>
+
+Make sure that the program runs again when you finish the code. While we have the game recording the hits, we don't actually see this anywhere. So to conclude, let's enhance the drawing of the game. Rather than putting this in main, this is itself a new identifiable action so we can code it into its own procedure - `draw_game`.
+
+|   |   |
+|---|---|
+| **Procedure** | *Draw Game* |
+| **Parameters** | `game` The reaction game data to draw to the screen |
+| **Description** | Draw the game to the screen by clearing the screen, drawing the game's target, and then drawing game stats to the top left of the screen. This also refreshes the screen to ensure it is shown to the user. |
+
+We have most of this code in main, so it is a case of cutting it out of there and pasting it into the new `draw_game` procedure. We can draw the text to the screen using SplashKit's [draw text](https://splashkit.io/api/graphics/#draw-text-3) procedure. This version of draw text takes in parameters for the text, its color, and its location on the screen. The characters are 8 pixels high, so you can draw multiple lines 10 pixels apart and it should look ok.
+
+*What text do we draw?*
+
+We can start with the number of hits on one line, and then below this the average time per hit. To calculate the average time per hit you can call [current ticks](https://splashkit.io/api/utilities/#current-ticks) which returns the number of milliseconds since the program started.
+
+Have a go at coding up these changes. They include:
+
+- Move the drawing code into a new `draw_game` procedure.
+- Make sure to call `draw_game` in `main`.
+- Extend `draw_game` to output the hits and average time per hit.
+
+Make sure to build and run your program as you work through getting this to work. The code for `main` would be:
+
+```cpp
+int main()
+{
+  open_window("Reaction Timer", 800, 600);
+
+  // Create the game data
+  reaction_game_data game = new_reaction_game();
+  
+  while (!quit_requested())
+  {
+    process_events();
+
+    if (mouse_clicked(LEFT_BUTTON) && mouse_over_target(game.target))
+    {
+      game.target = random_target();
+      game.hits++;
+    }
+    
+    draw_game(game);
+  }
+  
+  return 0;
+}
+```
+
+:::tip
+Consider adding a function to calculate the average time per hit. This could be passed the game and return this stat for you. Then you can use that inside draw game.
+:::
+
+<Accordion>
+  <AccordionItem
+    header="Code for draw game"
+  >
+
+Here is my version of `draw_game`. I decided to create a `game_average_time` function to calculate the average time. This helped with the logic to avoid divide by zero errors when the game starts.
+
+```cpp
+/**
+ * @brief Draws the game on the screen.
+ * @param game The reaction game data to draw to the screen
+ */
+void draw_game(reaction_game_data game)
+{
+  clear_screen(COLOR_WHITE);
+  draw_text("Hits: " + to_string(game.hits), COLOR_BLACK, 0, 0);
+  draw_text("Average time: " + to_string(game_average_time(game)), COLOR_BLACK, 0, 10);
+  // Draw the target
+  draw_target(game.target);
+  refresh_screen();
+}
+```
+
+My code for game average time is shown below. I use the current time when there are no hits, then after that we have the time per hit based on the current time and the number of hits.
+
+```cpp
+/**
+ * @brief Calculates the average time per hit in the reaction game.
+ * @param game The reaction game data
+ * @return The average time per hit
+ */
+int game_average_time(reaction_game_data game)
+{
+  if (game.hits == 0)
+  {
+    return current_ticks();
+  }
+  else
+  {
+    return current_ticks() / game.hits;
+  }
+}
+```
+
+  </AccordionItem>
+</Accordion>
+
+Once you finish this you should have a working reaction testing program. As you run it you should be able to see the number of hits increasing, and the average reaction time.
+
+## Test it out
+
+Generally you would build all programs in this way, no matter the domain. Business applications, games, security software, etc. In all cases, you need to think about the things that you need to capture data about in the digital reality you are building. You start by creating one type, and then build out from there. Adding a little each time as you create new things in your program in order to add new features and functionality.
+
+You could extend this program to record accuracy by also tracking misses. To do this you would update the reaction game data struct, its initialisation, the logic that records the clicks, and then how the game is drawn.
+
+You could also enhance the `draw_target` to make the target more appealing. This could simply be drawing three circles, or you could switch it out and draw and scale a bitmap. The great thing here is that when you make this change you don't need to think about the other parts of the program, you can just work on changing the way it draws.
+
+Hopefully this has helped you understand how we integrate the use of functions and procedures together with structs and enums as we build programs.
