--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/2-trailside/02-03-null.md
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/2-trailside/02-03-null.md
@@ -4,7 +4,7 @@ sidebar:
     label: " - Pointing to Nothing"
 ---
 
-With pointers, we can set up relationships between things in our code. Sometimes you want may want to indicate that there is nothing for a particular relationship. This could be achieved by having a special address that means the pointer points to *"nothing"*.
+With pointers, we can set up relationships between things in our code. Sometimes you may want to indicate that there is nothing for a particular relationship. This could be achieved by having a special address that means the pointer points to *"nothing"*.
 
 Remember, with pointers you have two values. The value of the pointer which is the address of the value pointed to, and you can follow the pointer to read the value at that address. So, it is possible to have a special address value means there is no value to read. Though, the implication of this would be that the program would crash if you did try to read the value that was referred to.
 
