Update stats calculator to build along with the student

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
@@ -2,17 +2,14 @@
 title: Statistics Calculator
 ---
 
-[Table x.y](#TableStatisticsCalculator) contains a description of a small statistics programs. This program reads a number of values from the user, and then outputs some statistics calculated from these values. This program will make use of arrays to store the values entered, and then calculate the required statistics.
-
-<br/>
-<a id="TableStatisticsCalculator"></a>
+The following table contains a description of a small statistics programs. This program reads a number of values from the user, and then outputs some statistics calculated from these values. This program will make use of arrays to store the values entered, and then calculate the required statistics.
 
 |   |   |
 |---|---|
 | **Name** | *Statistics Calculator* |
 | **Description** | Reads values from the user and calculates a range of statistics that are output to the Terminal. Statistics output include **mean**, **maximum**, and **sum**.|
 
-<div class="caption">Description of the <code>Statistics Calculator</code>program</div><br/>
+<div class="caption">Description of the statistics calculator program</div><br/>
 
 As before, the process to design and implement this program will follow a number of steps:
 
@@ -22,6 +19,8 @@ As before, the process to design and implement this program will follow a number
 4. Implement our design
 5. Compile, run, and test the program
 
+It is important to code as you go, so we will be implementing the design as we go through the steps.
+
 ## Understanding Statistics Calculator
 
-Most of the ideas around the Statistics Calculator should be fairly straight forward. The main things to be checked are the equations needed to calculate the different statistics, and then to convert these into steps for the computer.
+Most of the ideas around the statistics calculator should be fairly straight forward. The main things to be checked are the equations needed to calculate the different statistics, and then to convert these into steps for the computer. This should allow us to focus on arrays, and how we can use them to store the values entered by the user.
