--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-stats-design.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-stats-design.mdx
@@ -4,90 +4,50 @@ sidebar:
   label: " - Design Overview"
 ---
 
-Before we think about the calculations, let's put the infrastructure in place to get the numbers that we will work on within our program. We can think through how we will organise the data within the program, and think through the different functions and procedures we will use.
+Before we think about the calculations, let's put the infrastructure in place to get the numbers that we will work on within our program. We can quickly get a big picture for the program, and the data it will contain.
 
 ## Data Structure
 
-For this program we are going to need to handle an array of numbers. We will need to pass this around, and loop through all the elements. As C does not remember the size of the array when it is passed, we could track this with separate parameters, but the easier option is to set this up with a struct.
+As a first step, we should think about what data we need and how it will be represented in the program.
 
-The following pseudocode outlines the plan for this struct. We need to have a constant to set the array to the largest size we want to accept. This can start at 20, so that we can easily test trying to add more than 20 values. Later we can easily change this to a larger value.
+For this program we are going to need to handle an array of numbers. We will need to pass this around, and loop through all the elements. As C does not remember the size of the array when it is passed, we could track this with separate parameters, but the easier option is to set this up with a struct. So, we can design our program to use a struct to hold the array of numbers and the current number of elements we are using.
 
-The `Number Data` struct can contain the array and the number of elements in the array (its size). This will simplify passing this data around as we build this program up.
+The following pseudocode outlines my plan for this. It contains:
 
-```
+- A constant to set the array to the largest number of elements we want to accept. This can start at 20, so that we can easily test trying to add more than 20 values. Later we can easily change this to a larger value.
+- The `number data` struct can contain the array and the number of elements we are currently using in the array (its size). This will simplify passing this data around as we build this program up. Note that the size should be less than or equal to the maximum number of elements we can store (`MAX_NUMBERS`).
+
+```plaintext
 Const: MAX_NUMBERS int with value 20
 
-Struct: Number Data
+Struct: number data
 Fields:
-- Values: array of MAX_NUMBERS double values
-- Size: an integer for the current number of values
+- values: array of MAX_NUMBERS double values
+- size: an integer for the current number of values
 ```
-
-Now we need to look at how we can put this all together.
-
-## Handling Input
-
-Programs can be thought of as transforming data, taking inputs and generating outputs, as shown in [Figure x.y](#FigureProgramInputOutput). So far we have examined the processing needed to create the outputs, but we still need to consider how the data gets into the program, the inputs.
-
-<br/>
-import imgProgramInputOutput from './images/program-input-output.png';
-
-<a id="FigureProgramInputOutput"></a>
-<img src={imgProgramInputOutput.src} alt="Programs convert Inputs to Outputs" width="75%" />
-<div class="caption">Programs convert Inputs to Outputs</div><br/>
-
-At the start of the program the user will need to enter the values that will be stored in the array. This task can be coded in a `Populate Array` procedure. This will get the user to enter the values into the array. We can achieve this by getting the user to enter *each value* in the array.
-
-The logic for populating the array can be split into a few functions. At the top we have the `Populate Array` procedure, that can call a `Read Integer` and a `Read Double` function. These functions will be very useful across a number of different programs, so this may be able to be used elsewhere. Within `Populate Array`, we can use `Read Integer` to determine the number of values the user wants to enter, and `Read Double` to read each value.
-
-### Reading double and integer values from the user
-
-[Figure x.y](#FigureFlowchartReadDouble) shows the flowchart for the process of reading a double value from the user, and similar logic can be used for read integer. We have seen this before, and you can copy in the code you have for this already,
-
-<br/>
-import imgFlowChartReadDouble from './images/flowchart-read-double.png';
-
-<a id="FigureFlowchartReadDouble"></a>
-<img src={imgFlowChartReadDouble.src} alt="Flowchart showing the process for reading a double" width="80%" />
-<div class="caption">Flowchart showing the process for reading a double</div><br/>
-
-## Populating the array
-
-With the logic for `Read Double` and `Read Integer` in place, the next step is to determine the steps needed in the `Populate Array` procedure. This procedure will ask the user how many values that want to enter, and then loop and read these values from the user one at a time. This can use `Read Integer` to get the number of values to enter, and `Read Double` to get the value from the user, and then store this in the array's elements.
-
-A flowchart illustrating the steps in `Populate Array` is shown in [Figure x.y](#FigureFlowchartPopulateArray). This is passed the number data to populate using the `Number Data` struct passed by reference.
-
-The first part of the procedure reads in the number of elements the user wants to populate. We need to make sure that this is not larger than the maximum capacity of the array. The first decision allows us to detect when this occurs, and we can then set the number the user wants to enter to be the maximum we can accept. The value will need to be stored in the `data.size` field within the struct. This way, the struct will contain both the number of elements and the data itself.
-
-Following this, we have the loop to initialise each of the values the user ahs indicated they want to provide. The decision node is being used to show the control mechanism of the for loop, counting from the lowest index of the array to the highest index. Within the body of the loop the two instructions build a prompt string, and then use this in the call to `Read Double`. The result returned from `Read Double` is stored in the current (i<sup>th</sup>) element of the array.
-
-<br/>
-import imgFlowChartPopulateArray from './images/flowchart-populate-array.png';
-
-<a id="FigureFlowchartPopulateArray"></a>
-<img src={imgFlowChartPopulateArray.src} alt="Flowchart showing the process for Populate Array" width="80%" />
-<div class="caption">Flowchart showing the process for `Populate Array`</div><br/>
-
-## Where is the data stored?
-
-The last question to remain is where will the data be stored? The array is a kind of variable, and therefore the array could be a local variable or a global variable. As global variables should be avoided where possible, this will be coded as a **local variable** within the program’s `Main` function. It can then be passed from there to the other functions and procedures in the code.
 
 ## Overview of Statistic Calculator's design
 
-That completes the plan needed to implement the statistics calculator program. The final structure is shown in
-[Figure x.y](#FigureStructureChartStatisticsCalculator) as a Structure Chart. Notice the double-headed arrow on `data` in the call from `Main` to `Populate Array`. This indicates that the data parameter is passing the values into, and getting values out of the `Populate Array` procedure. This is a way of indicating that the parameter is passed by reference. Also see how the `data` value is passed from `Main` into the functions that calculate the statistics. In these cases we can still use pass-by-reference, but we can use the `const` modifier to ensure that the values are not changed.
+Before we start coding, it is a good idea to think through how the code will come together. This will ensure we have the right things in place before we start coding. This doesn't need to take long, you just want to get a bit of an idea of the direction you are going.
 
-<br/>
-import imgStructureChartStatisticsCalculator from './images/structurechart-statistics-calculator.png';
+For this program, we will need to:
 
-<a id="FigureStructureChartStatisticsCalculator"></a>
-<img src={imgStructureChartStatisticsCalculator.src} alt="Structure Chart showing the structure of the Statistics Calculator program" width="100%" />
-<div class="caption">Structure Chart showing the structure of the `Statistics Calculator` program</div><br/>
+- Read the data in from the user
+- Display the data entered
+- Calculate the statistics: mean, maximum, and sum to start
 
-:::note
+We can break this down into a few functions and procedures:
 
-- Remember anytime you need to do something with all the elements in an array you need to work out how you can achieve this **for each** element in the array
-- Notice that the processing of individual values from the arrays are always similar
-- Make sure you can see how the for loop is able to perform actions for each element of the array
+- `main` will contain the data and coordinate things
+- `populate_array` will read the data in from the user. This can use:
+  - `read_integer` to get the number of values to enter (up to `MAX_NUMBERS`)
+  - `read_double` to get the data from the user.
+- `print` will display the data entered
+- Three functions (`max`, `mean`, and `sum`) will calculate the statistics
 
-:::
+We can represent this in a structure chart to start to visualise how this comes together.
+
+![Structure Chart showing the structure of the Statistics Calculator program](./images/structurechart-statistics-calculator.png)
+<div class="caption">Structure Chart showing the structure of the statistics calculator program</div><br/>
+
+Our `number_data` struct would work in this context, as it can be passed around to the different functions and procedures.
