P2C2 minor typo fixes

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-2-explore-functions.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-put-together/00-2-explore-functions.mdx
@@ -148,7 +148,7 @@ int main()
 
 <Accordion>
   <AccordionItem
-    header="Code For Read String"
+    header="Code For Read Integer"
   >
 
 ```cpp
@@ -182,7 +182,7 @@ Have a go at thinking about the specification for this, and then code this up an
 
 <Accordion>
   <AccordionItem
-    header="Code For Read Read Integer Range"
+    header="Code For Read Integer Range"
   >
 
 I used the following to test out this function:
