Update P0C2 folder structure - fix broken links

--- a/src/content/docs/book/appendix/0-installation/0-overview.mdx
+++ b/src/content/docs/book/appendix/0-installation/0-overview.mdx
@@ -3,8 +3,8 @@ title: Overview
 ---
 
 import { CardGrid } from "@astrojs/starlight/components";
-import Card from "../../../../../../components/Card.astro";
-import LinkCard from "../../../../../../components/LinkCard.astro";
+import Card from "../../../../../components/Card.astro";
+import LinkCard from "../../../../../components/LinkCard.astro";
 
 :::tip[Supported Operating Systems]
 Click on one of the supported operating systems below to see more info about the setup guides available:
@@ -42,12 +42,12 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="Raspberry Pi Hardware Setup Guide"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/2-2-pi-computer/"
+    href="/book/appendix/0-installation/2-2-pi-computer/"
     description="Go to 'Build my Raspberry Pi' page"
   />
   <LinkCard
     title="Raspberry Pi Software Setup Guide"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/2-3-setup-pi/"
+    href="/book/appendix/0-installation/2-3-setup-pi/"
     description="Go to 'Set up my Raspberry Pi' page"
   />
 </Card>
@@ -59,11 +59,11 @@ These guides have been created to help you set up your computer and install the 
 
   For this you will need a *macOS* computer running OS X 12.0 or later.
   
-  Note: *If you are running an earlier version, make sure to read the [No SplashKit Global Install](/book/part-0-getting-started/2-computer-use/0-installation/3-0-troubleshooting-install/#no-splashkit-global-install) troubleshooting guide once you have finished the setup steps, or if you have any issues.*
+  Note: *If you are running an earlier version, make sure to read the [No SplashKit Global Install](/book/appendix/0-installation/3-0-troubleshooting-install/#no-splashkit-global-install) troubleshooting guide once you have finished the setup steps, or if you have any issues.*
 
   <LinkCard
     title="macOS Software Setup Guide"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/2-1-setup-macos/"
+    href="/book/appendix/0-installation/2-1-setup-macos/"
     description="Go to 'Set up my macOS' page"
   />
 </Card>
@@ -79,12 +79,12 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="Windows Software Setup Guide (using WSL)"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/2-5-setup-win-wsl/"
+    href="/book/appendix/0-installation/2-5-setup-win-wsl/"
     description="Go to 'Set up my Windows (with WSL)' page"
   />
   <LinkCard
     title="Windows Software Setup Guide (using MSYS2)"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/2-6-setup-win-msys/"
+    href="/book/appendix/0-installation/2-6-setup-win-msys/"
     description="Go to 'Set up my Windows (with MSYS2)' page"
   />
 </Card>
@@ -100,7 +100,7 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="Set up my Linux Box"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/2-0-setup-linux/"
+    href="/book/appendix/0-installation/2-0-setup-linux/"
     description="Go to 'Set up my Linux Box' page"
   />
 </Card>
@@ -116,7 +116,7 @@ To get help with troubleshooting installation issues (or any other troubleshooti
 
   <LinkCard
     title="General Troubleshooting"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/3-0-troubleshooting-install/#general-troubleshooting"
+    href="/book/appendix/0-installation/3-0-troubleshooting-install/#general-troubleshooting"
     description="Go to the 'General Troubleshooting' section of the 'Installation Troubleshooting' page"
   />
 
@@ -124,7 +124,7 @@ To get help with troubleshooting installation issues (or any other troubleshooti
 
   <LinkCard
     title="Specific Issues"
-    href="/book/part-0-getting-started/2-computer-use/0-installation/3-0-troubleshooting-install/#specific-issues"
+    href="/book/appendix/0-installation/3-0-troubleshooting-install/#specific-issues"
     description="Go to the 'Specific Issues' section of the 'Installation Troubleshooting' page"
   />
 </Card>
